# LWGE

./: .gitignore  .gitmodules  BuildShaders.bat  CMakeLists.txt  NodeEditor.json  README.md  Setup.bat  SetupDependencies.ps1  imgui.ini
LWGE-Demo/src/: Main.cpp
LWGE-Demo/src/LWGE-Demo/: Main.cpp
LWGE/include/LWGE/: SystemController.hpp
LWGE/src/LWGE/: SystemController.cpp
LWGE/src/LWGE/RHI/: Context.cpp  Swapchain.cpp  Swapchain.hpp
LWGE/src/LWGE/Window/: Window.cpp
res/shader/TerrainEditor/: Test.vertex.hlsl
scripts/: LWGE.cmake
src/: CMakeLists.txt
src/LWGE/: SystemController.cpp  SystemController.hpp
src/LWGE-Common/: CMakeLists.txt
src/LWGE-Common/Private/LWGE-Common/: Clock.cpp
src/LWGE-Common/Public/LWGE-Common/: Clock.hpp  Function.hpp  Handle.hpp  Pointer.hpp
src/LWGE-Common/Public/LWGE-Common/Container/: PayloadQuadTree.hpp
src/LWGE-DearImgui/: CMakeLists.txt
src/LWGE-DearImgui/Private/LWGE-DearImgui/: ImguiImpl.cpp
src/LWGE-DearImgui/Public/LWGE-DearImgui/: ImguiImpl.hpp
src/LWGE-Demo/: CMakeLists.txt  Main.cpp
src/LWGE-Demo/Private/LWGE-Demo/: GUI.cpp  GUI.hpp  Main.cpp
src/LWGE-ImageFormat/: CMakeLists.txt
src/LWGE-ImageFormat/Private/LWGE-ImageFormat/: ImageInfo.cpp
src/LWGE-ImageFormat/Public/LWGE-ImageFormat/: Format.hpp  ImageInfo.hpp
src/LWGE-RenderDriver/: CMakeLists.txt
src/LWGE-RenderDriver/Private/LWGE-RenderDriver/: CommandList.cpp  CommandListRecycler.cpp  CommandListRecycler.hpp  D3D12Includes.hpp  FrameContext.hpp  HandleResourcePool.hpp  RenderDriver.cpp  Swapchain.cpp  Util.cpp  Util.hpp
src/LWGE-RenderDriver/Private/LWGE-RenderDriver/D3D12/: D3D12CommandList.cpp  D3D12CommandList.hpp  D3D12CommandListRecycler.cpp  D3D12CommandListRecycler.hpp  D3D12Includes.hpp  D3D12RenderDriver.cpp  D3D12RenderDriver.hpp  D3D12Swapchain.cpp  D3D12Swapchain.hpp  D3D12Util.cpp  D3D12Util.hpp
src/LWGE-RenderDriver/Public/LWGE/: RenderDriver.hpp
src/LWGE-RenderDriver/Public/LWGE-RenderDriver/: CommandList.hpp  Constants.hpp  RenderDriver.hpp  Resource.hpp  Swapchain.hpp
src/LWGE-Thread/: CMakeLists.txt
src/LWGE-Thread/Private/LWGE-Thread/: JobSystem.cpp
src/LWGE-Thread/Public/LWGE-Thread/: ConditionalLock.hpp  JobSystem.hpp
src/LWGE-Window/: CMakeLists.txt
src/LWGE-Window/Private/LWGE-Window/: Input.cpp  Window.cpp
src/LWGE-Window/Public/LWGE-Window/: Input.hpp  InputCodes.hpp  Window.hpp
src/LWGE/Common/: Function.hpp  Handle.hpp
src/LWGE/RHI/: CommandListRecycler.cpp  CommandListRecycler.hpp  Context.cpp  Context.hpp  D3D12Util.cpp  D3D12Util.hpp  Swapchain.cpp  Swapchain.hpp
src/LWGE/Thread/: JobSystem.cpp  JobSystem.hpp
src/LWGE/Window/: Input.cpp  Input.hpp  InputCodes.hpp  Window.cpp  Window.hpp
