CMAKE_MINIMUM_REQUIRED(VERSION 3.18 FATAL_ERROR)

INCLUDE("scripts/LWGE.cmake")

PROJECT(LWGE)

IF(WIN32)
    MESSAGE(STATUS "Building LWGE for Win32.")
ELSE()
    MESSAGE(FATAL_ERROR "Incompatible target platform. Aborting")
ENDIF()

SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CONFIGURATION_TYPES "Debug;RelWithDebInfo;Release" CACHE STRING "" FORCE)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
ADD_SUBDIRECTORY("src")

OPTION(LWGE_GRAPHICS_DEBUG "Enable validation layers and debug logging." ON)

IF(CMAKE_GENERATOR MATCHES "Visual Studio")
    MESSAGE(VERBOSE "Using Visual Studio.")
    SET_PROPERTY(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY
        VS_STARTUP_PROJECT ${LWGE_DEMO_NAME})
    SET_TARGET_PROPERTIES(${LWGE_DEMO_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")
ENDIF()
