SET(LWGE_DEARIMGUI_NAME "LWGE-DearImgui")
MAKE_LWGE_STATIC_LIB(${LWGE_DEARIMGUI_NAME})
TARGET_LINK_LIBRARIES(${LWGE_DEARIMGUI_NAME} PUBLIC
    LWGE-Common
    LWGE-Window
    LWGE-RenderDriver
    IMGUI)
TARGET_INCLUDE_DIRECTORIES(${LWGE_DEARIMGUI_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/d3d12agilitysdk/)
