SET(LWGE_RENDERDRIVER_NAME "LWGE-RenderDriver")
MAKE_LWGE_STATIC_LIB(${LWGE_RENDERDRIVER_NAME})
TARGET_LINK_LIBRARIES(${LWGE_RENDERDRIVER_NAME} PUBLIC
    LWGE-Common
    LWGE-Window)
IF(LWGE_BUILD_D3D12)
    TARGET_LINK_LIBRARIES(${LWGE_RENDERDRIVER_NAME} PUBLIC
        d3d12.lib
        dxgi.lib)
    TARGET_INCLUDE_DIRECTORIES(${LWGE_RENDERDRIVER_NAME} PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/d3d12agilitysdk/)
    TARGET_COMPILE_DEFINITIONS(${LWGE_RENDERDRIVER_NAME} PUBLIC
        "LWGE_BUILD_D3D12=1")
ENDIF()
IF(LWGE_GRAPHICS_DEBUG)
    TARGET_COMPILE_DEFINITIONS(${LWGE_RENDERDRIVER_NAME} PUBLIC
    "LWGE_GRAPHICS_DEBUG=1")
ENDIF()
