SET(LWGE_RENDERDRIVER_NAME "LWGE-RenderDriver")
MAKE_LWGE_STATIC_LIB(${LWGE_RENDERDRIVER_NAME})
TARGET_LINK_LIBRARIES(${LWGE_RENDERDRIVER_NAME} PUBLIC
    LWGE-Common
    LWGE-Window
    LWGE-Thread
    LWGE-ImageFormat)
TARGET_LINK_LIBRARIES(${LWGE_RENDERDRIVER_NAME} PUBLIC
    d3d12.lib
    dxgi.lib)
TARGET_INCLUDE_DIRECTORIES(${LWGE_RENDERDRIVER_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../../thirdparty/d3d12agilitysdk/)
IF(LWGE_GRAPHICS_DEBUG)
    TARGET_COMPILE_DEFINITIONS(${LWGE_RENDERDRIVER_NAME} PUBLIC
    "LWGE_GRAPHICS_DEBUG=1")
ENDIF()
